# EEGDash

./: .buildinfo  .coverage  .env  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CNAME  CONTRIBUTING.md  DevNotes.md  LICENSE  MANIFEST.in  README.md  api.html  api_core.html  api_dataset.rst  api_features.html  coverage.xml  dataset_bubble_methods.py  dataset_summary.html  datasets.md  developer_notes.html  download.py  fill_openneuro_modalities.py  generate_ground_true.py  genindex.html  index.html  objects.inv  openneuro-s3-notes.md  overview.html  plot.py  plot_dataset_bubbles.py  plot_dataset_summary_bubbles.py  plot_dataset_summary_bubbles_plotly.py  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  (+10 more)
.github/workflows/: 1-fetch-openneuro-datasets-nemar.yml  doc.yaml  (+4 more)
_sources/: dataset_summary.rst.txt  index.rst.txt  sg_execution_times.rst.txt  user_guide.rst.txt
_static/: copybutton.js
api/: api.html  api_core.html  api_dataset.html  api_features.html  eegdash.api.html  eegdash.bids_eeg_metadata.html  eegdash.const.html  eegdash.data_config.html  eegdash.data_utils.html  eegdash.dataset.dataset.html  eegdash.dataset.html  eegdash.dataset.registry.html  eegdash.downloader.html  eegdash.features.datasets.html  eegdash.features.decorators.html  eegdash.features.extractors.html  eegdash.features.feature_bank.complexity.html  eegdash.features.feature_bank.connectivity.html  eegdash.features.feature_bank.csp.html  eegdash.features.feature_bank.dimensionality.html  eegdash.features.feature_bank.html  eegdash.features.feature_bank.signal.html  eegdash.features.feature_bank.spectral.html  eegdash.features.feature_bank.utils.html  eegdash.features.html  eegdash.features.inspect.html  eegdash.features.serialization.html  eegdash.features.utils.html  eegdash.hbn.html  eegdash.hbn.preprocessing.html  eegdash.hbn.windows.html  eegdash.html  eegdash.logging.html  eegdash.mongodb.html  eegdash.paths.html  eegdash.preprocessing.html  eegdash.registry.html  eegdash.utils.html  features_overview.html  modules.html
code/: .env  aws_ingest.py  data_utils.py  signalstore  signalstore_data_utils.py  test_signalstore.ipynb  test_signalstore_usage.ipynb
consolidated/: eegmanylabs_datasets.json  figshare_datasets_detailed_test.json  figshare_datasets_test.json  nemardatasets_repos.json  openneuro_datasets.json  to_digest_nemardatasets_repos.json  to_digest_openneuro_datasets.json
dataset_summary/: bubble.html  kde.html  sankey.html  table.html  treemap.html
docs/: Makefile  README.md  conf.py  convert_xls_2_martkdown.py  custom_gallery.py  datasets.xlsx  generate_dataset_pages.py  index.rst  prepare_summary_tables.py  sphinx_time_estimation.py  table_tag_utils.py
documents/: architecture.pptx  architecture2.pptx
eegdash/: __init__.py  api.py  aws_ingest.py  bids_eeg_metadata.py  const.py  data_config.py  data_utils.py  dataset.py  dataset_summary.csv  downloader.py  http_api_client.py  logging.py  main.py  mongodb.py  paths.py  preprocessing.py  registry.py  sankey_helpers.py  script.py  signalstore  signalstore_data_utils.py  utils.py
eegdash.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
examples/: README.txt  no_working_pfactor_classification.py  no_working_tutorial_audi_oddball.py  no_working_tutorial_pybids_braindecode_BIDSDataset.py  tutorial_audi_oddball.py  tutorial_eoec.py  tutorial_features.py  tutorial_features2.py  tutorial_features_eoec.py  tutorial_open_eyes_close_eye.py  tutorial_p3_oddball.py  tutorial_pfactor_classification.py  tutorial_pfactor_features.py  tutorial_scratch.py  tutorial_sex_classification.py
install/: install.html  install_pip.html  install_source.html
notebook/: data_loading_example.ipynb  make_table_from_results.py  no_working_pfactor_classification.py  no_working_tutorial_audi_oddball.py  no_working_tutorial_p3_oddball.py  no_working_tutorial_pybids_braindecode_BIDSDataset.py  not_working_tutorial_scratch.py  notutorial_pfactor_features.py  tutorial_age.py  tutorial_eegprep.py  tutorial_features.py  tutorial_features_eoec.py  tutorial_pfactor_classification.py  tutorial_pfactor_classification_dtyoung.py  tutorial_pfactor_classification_dtyoung_arno.py  tutorial_pfactor_classification_dtyoung_arno_regression.py  tutorial_pfactor_classification_dtyoung_wandb.py  tutorial_sex_classification.py
notebooks/: __init__.py  eegdash.ipynb  models_dung_2021.py  participants_ds005514.tsv  scratch.ipynb  scratch_features.ipynb  scratch_features2.ipynb  test_eegdash_braindecode.ipynb  test_pybids_braindecode_BIDSDataset.ipynb  testspeed.ipynb  tutorial_audi_oddball.ipynb  tutorial_eoec.ipynb  tutorial_features_eoec.ipynb  tutorial_p3_oddball.ipynb  tutorial_pfactor_classification.ipynb  tutorial_pfactor_features.ipynb  tutorial_sex_classification.ipynb  update_mongo_db.ipynb
participants_files/: downloader.sh  generate_links.sh  links.txt  repo_list.txt
scripts/: 1_nemar_dataset_list.py  create_metadata.py  data_ingest.py  datasets.json  release_script.py  scan_openneuro.py
src/: README.md
tests/: __init__.py  conftest.py  eegdash.ipynb  test.ipynb  test_api.py  test_bids_dependencies.py  test_cache_folder_suffix.py  test_challenge_kwargs.py  test_correctness.py  test_database.py  test_dataset.py  test_dataset_registration.py  test_dataset_summary_adapter.py  test_downloader.py  test_eegdash.py  test_eegdash_braindecode.ipynb  test_eegdash_braindecode_vgg.ipynb  test_eegdash_braindecode_vgg_dtyoung.ipynb  test_eegdash_braindecode_vgg_simple.ipynb  test_eegdash_vgg_eoec_simple.ipynb  test_eegdash_vgg_sex.ipynb  test_eegdash_vgg_sex_simple.ipynb  test_eoec.py  test_features.py  test_features_extraction.py  test_functional.py  test_http_api_connection.py  test_init.py  test_minirelease.py  test_mongo_connection.py  test_offline.py  test_offline_bids_matching.py  test_participants_parsing.py  test_plotly_dataset_bubbles.py  test_prepare_summary_tables.py  test_query.py  test_reading_files.ipynb  test_s3_mne.ipynb  test_signalstore.ipynb  test_signalstore_openneuro.ipynb  (+5 more)
(+1361 files in other folders)
