[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "eegdash"
authors = [
  { name = "Young Truong",    email = "dt.young112@gmail.com" },
  { name = "Arnaud Delorme",  email = "adelorme@gmail.com" },
  { name = "Aviv Dotan",  email = "avivd220@gmail.com" },
  { name = "Oren Shriki",  email = "oren70@gmail.com" },
  { name = "Bruno Aristimunha", email = "b.aristimunha@gmail.com"}
]
description     = "EEG data for machine learning"
readme          = "README.md"
license         = "GPL-3.0-only"
requires-python = ">=3.10"

classifiers = [
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Development Status :: 3 - Alpha",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
  "braindecode>=1.0",
  "mne_bids>=0.16.0",
  "numba",
  "numpy",
  "pandas",
  "pybids",
  "pymongo",
  "python-dotenv",
  "s3fs",
  "scipy",
  "tqdm",
  "xarray",
  "h5io >= 0.2.4",
  "pymatreader",
  "eeglabio",
  "tabulate",
  "docstring_inheritance",
]

[project.urls]
Homepage = "https://github.com/sccn/EEG-Dash-Data"
Issues   = "https://github.com/sccn/EEG-Dash-Data/issues"


[project.optional-dependencies]
tests = [
    'pytest',
    'pytest-cov',
    'codecov',
    'pytest_cases',
    'pytest-benchmark',
]
dev = [
  "pre-commit",
  "ipykernel"
]

docs = [
  "sphinx",
  "sphinx_design",
  "sphinx_gallery",
  "sphinx_rtd_theme",
  "pydata-sphinx-theme",
  "sphinx-autobuild",
  "sphinx-sitemap",
  "numpydoc",
  "memory_profiler",
  "ipython",
  "lightgbm",
  "plotly"
]

all = [
  "eegdash[docs]",
  "eegdash[dev]",
  "eegdash[tests]",
]

[tool.setuptools]
py-modules = []
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "eegdash.__version__"}

[tool.setuptools.packages.find]
where      = ["."]
include    = ["eegdash*"]
exclude    = []
namespaces = false

[tool.setuptools.package-data]
eegdash = ["dataset_summary.csv"]

[tool.ruff]
lint.ignore-init-module-imports = true
line-length = 88
target-version = "py311"

[tool.isort]
skip                   = [".gitignore"]
# Format examples too; pre-commit selects files, no need for skip_glob
py_version             = 312
profile                = "black"
sections               = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_first_party      = ["eegdash", "braindecode"]
lines_between_sections = 1
atomic                 = false

[pytest]
testpaths        = ["tests"]
python_files     = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
